# runcat

./: Cargo.toml  LICENSE  README.md
config/: resource.toml
src/: cpu.rs  err.rs  event.rs  gif.rs  icon_resource.rs  main.rs  run_cat_tray.rs  util.rs
