[package]
name = "runcat"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.1"
winit = "0.30.1"
tray-icon = "0.14.3"
sysinfo = "0.30.12"
once_cell = "1.19.0"
parking_lot = "0.12.3"
dark-light = "1.1.1"
crossbeam-channel = "0.5.13"
tokio = { version = "*", features = ["full"] }
tokio-macros = { version = "*" }
