[package]
name = "runcat"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.6"
winit = "0.30.11"
tray-icon = "0.20.1"
sysinfo = "0.35.1"
once_cell = "1.21.3"
parking_lot = "0.12.3"
dark-light = "2.0.0"
crossbeam-channel = "0.5.15"
tokio = { version = "1.45.1", features = ["full"] }
tokio-macros = { version = "2.5.0" }
config = { version = "0.15.11" }
serde = { version = "1.0.219" }
